--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "express": "^4.16.3",
     "react": "^16.5.1",
-    "react-dom": "^16.5.1"
+    "react-dom": "^16.5.1",
+    "react-router": "^4.3.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
